--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.17MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-319.6KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 柬埔寨-3.61MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
-  - {name: 塞浦路斯-611.8KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-2.45MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.17MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.75MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.61MB/s(Youtube:不良林)
-      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.61MB/s(Youtube:不良林)
-      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.61MB/s(Youtube:不良林)
-      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.61MB/s(Youtube:不良林)
-      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.61MB/s(Youtube:不良林)
-      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.61MB/s(Youtube:不良林)
-      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 柬埔寨-3.61MB/s(Youtube:不良林)
-      - 塞浦路斯-611.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
