--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-2.45MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇹🇭 泰国-2.78MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.41MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.17MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.75MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇸🇬 新加坡-2.95MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-180.7KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇯🇵 日本-3.51MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 塞浦路斯-303.4KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇬🇧 英国-4.96MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-180.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 塞浦路斯-303.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-180.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 塞浦路斯-303.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-180.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 塞浦路斯-303.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-180.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 塞浦路斯-303.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-180.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 塞浦路斯-303.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-180.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 塞浦路斯-303.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.45MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-180.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 塞浦路斯-303.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
