--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-405.8KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇺🇸 美国-4.87MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.82MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.69MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-3.75MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 塞浦路斯-303.4KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇬🇧 英国-4.96MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇸🇬 新加坡-157.6KB/s(Youtube:不良林), server: 194.124.35.23, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 台湾-1015.2KB/s(Youtube:不良林), server: lc-hk03-direct01.lc-hk03.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk03-direct01.lc-hk03.lc-node.com}}
+  - {name: 🇭🇰 (已存活1天)香港-3.55MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-246.7KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
   - {name: 🇨🇦 加拿大-2.04MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇨🇦 加拿大-3.88MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-360.6KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 1a1247ea6cb266b4, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.56MB/s(Youtube:不良林), server: sg1.xz88.ml, port: 12464, type: vmess, uuid: 09a62e54-0f74-4002-8d45-5fe63e4bf2a2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-303.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1015.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-303.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1015.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-303.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1015.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1015.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.55MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-303.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1015.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-303.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1015.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-303.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1015.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-405.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 塞浦路斯-303.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-157.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1015.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
